--- a/tests/Forestore.html
+++ b/tests/Forestore.html
@@ -2,8 +2,8 @@
 <html>
 
 	<head>
-		<title>jVectorMap demo</title>
-		<!--<meta name="viewport" content="width=device-width, height=device-height, minimum-scale=1.0, maximum-scale=2.0" />-->
+		<title>Forestore</title>
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<link rel="stylesheet" media="all" href="../jquery-jvectormap.css" />
 		<script src="assets/jquery-1.8.2.js"></script>
 		<script src="../jquery-jvectormap.js"></script>
@@ -79,6 +79,193 @@
 						animate: true
 					});
 				});
+				var plants = [{
+					name: 'Amazon',
+					coords: [10.0091294, -70.0371812],
+					status: 'closed',
+					offsets: [0, 2]
+				}, {
+					name: 'Siberian taiga',
+					coords: [64.0543102, 115.4825862],
+					status: 'closed',
+					offsets: [0, 2]
+				}, {
+					name: 'Siberian taiga',
+					coords: [67.5543102, 96.4825862],
+					status: 'closed',
+					offsets: [0, 2]
+				}, {
+					name: 'Siberian taiga',
+					coords: [60.5543102, 93.4825862],
+					status: 'closed',
+					offsets: [0, 2]
+				}, {
+					name: 'Siberian taiga',
+					coords: [61.0543102, 65.4825862],
+					status: 'closed',
+					offsets: [0, 2]
+				}, {
+					name: 'Siberian taiga',
+					coords: [66.0543102, 136.4825862],
+					status: 'closed',
+					offsets: [0, 2]
+				}, {
+					name: '青木原树海6',
+					coords: [36.9030599, 138.4213693],
+					status: 'closed'
+				}, {
+					name: '青木原树海5',
+					coords: [-34.9030599, 142.4213693],
+					status: 'closed'
+				}, {
+					name: '青木原树海1',
+					coords: [14.9030599, 108.4213693],
+					status: 'closed'
+				}, {
+					name: '青木原树海2',
+					coords: [18.9030599, 100.6213693],
+					status: 'closed'
+				}, {
+					name: '青木原树海3',
+					coords: [14.9030599, 98.6213693],
+					status: 'closed'
+				}, {
+					name: '青木原树海4',
+					coords: [-4.3030599, 139.4213693],
+					status: 'closed'
+				}, {
+					name: 'Congo\'s rainforest1',
+					coords: [1.4472465, 22.9903674],
+					status: 'closed'
+				}, {
+					name: 'Congo\'s rainforest2',
+					coords: [-6.4472465, 16.9903674],
+					status: 'closed'
+				}, {
+					name: 'Congo\'s rainforest3',
+					coords: [-6.7472465, 36.9903674],
+					status: 'closed'
+				}, {
+					name: 'Congo\'s rainforest4',
+					coords: [5.4472465, 24.9903674],
+					status: 'closed'
+				}, {
+					name: 'Norway forest',
+					coords: [60.513264, 7.1020357],
+					status: 'activeUntil2018'
+				}, {
+					name: 'jingpo Lake',
+					coords: [44.364503, 129.076252],
+					status: 'closed'
+				}, {
+					name: 'Vienna woods',
+					coords: [48.0331853, 15.0505223],
+					status: 'closed',
+					offsets: [0, -2]
+				}, {
+					name: 'Swedish forest',
+					coords: [59.1351446, 18.1348691],
+					status: 'closed',
+					offsets: [0, -2]
+				}, {
+					name: 'Finnish forest',
+					coords: [60.6200685, 24.5306289],
+					status: 'closed'
+				}, {
+					name: 'Italian forest',
+					coords: [45.6558015, 12.2500848],
+					status: 'closed',
+					offsets: [0, -2]
+				}, {
+					name: 'Canada forest',
+					coords: [43.1417497, 79.6583877],
+					status: 'closed'
+				}, {
+					name: 'Canada forest',
+					coords: [45.709331, 73.415865],
+					status: 'closed'
+				}, {
+					name: 'Canada forest',
+					coords: [49.6396481, 123.3915617],
+					status: 'closed'
+				}, {
+					name: 'Chilean forests',
+					coords: [-33.0401151, -70.3721088],
+					status: 'activeUntil2022'
+				}, {
+					name: 'Chilean forests',
+					coords: [-23.0401151, -70.3721088],
+					status: 'activeUntil2022'
+				}, {
+					name: 'Chilean forests',
+					coords: [-11.0401151, -71.3721088],
+					status: 'activeUntil2022'
+				}, {
+					name: 'KKB',
+					coords: [43.8913533, 29.2005777],
+					status: 'closed',
+					offsets: [0, -5]
+				}, {
+					name: 'KKI',
+					coords: [23.5544748, 12.3472095],
+					status: 'activeUntil2022',
+					offsets: [0, 2]
+				}, {
+					name: 'KKU',
+					coords: [63.4293465, -128.4774649],
+					status: 'closed'
+				}, {
+					name: 'KNK',
+					coords: [19.1473279, 78.3827739],
+					status: 'closed'
+				}, {
+					name: 'KKP',
+					coords: [69.2513078, 58.4356761],
+					status: 'activeUntil2022',
+					offsets: [0, -2]
+				}, {
+					name: 'KKG3',
+					coords: [49.9841308, -110.1846373],
+					status: 'activeUntil2018'
+				}, {
+					name: 'KKG2',
+					coords: [32.9841308, -90.1846373],
+					status: 'activeUntil2018'
+				}, {
+					name: 'KKG1',
+					coords: [69.9841308, -160.1846373],
+					status: 'activeUntil2018'
+				}, {
+					name: 'KKG4',
+					coords: [19.9841308, -102.1846373],
+					status: 'activeUntil2018'
+				}, {
+					name: 'KKK',
+					coords: [53.4104656, 10.4091597],
+					status: 'closed'
+				}, {
+					name: 'KWG',
+					coords: [32.0348748, 109.4097793],
+					status: 'activeUntil2022'
+				}, {
+					name: 'KBR',
+					coords: [53.850666, 39.3457603],
+					status: 'closed',
+					offsets: [0, 5]
+				}, {
+					name: 'KMK',
+					coords: [-50.408791, 97.4861956],
+					status: 'closed'
+				}, {
+					name: 'THTR',
+					coords: [21.6786228, -7.9700232],
+					status: 'closed'
+				}, {
+					name: 'KKE',
+					coords: [-72.4216974, 7.3706389],
+					status: 'activeUntil2022',
+					offsets: [0, 2]
+				}];
 				$('#map1').vectorMap({
 					map: 'world_mill_en',
 					panOnDrag: true,
@@ -98,87 +285,7 @@
 							stroke: '#383f47'
 						}
 					},
-					backgroundColor: '#383f47',
-					markers: [{
-						latLng: [41.90, 12.45],
-						name: 'Vatican City'
-					}, {
-						latLng: [43.73, 7.41],
-						name: 'Monaco'
-					}, {
-						latLng: [-0.52, 166.93],
-						name: 'Nauru'
-					}, {
-						latLng: [-8.51, 179.21],
-						name: 'Tuvalu'
-					}, {
-						latLng: [43.93, 12.46],
-						name: 'San Marino'
-					}, {
-						latLng: [47.14, 9.52],
-						name: 'Liechtenstein'
-					}, {
-						latLng: [7.11, 171.06],
-						name: 'Marshall Islands'
-					}, {
-						latLng: [17.3, -62.73],
-						name: 'Saint Kitts and Nevis'
-					}, {
-						latLng: [3.2, 73.22],
-						name: 'Maldives'
-					}, {
-						latLng: [35.88, 14.5],
-						name: 'Malta'
-					}, {
-						latLng: [12.05, -61.75],
-						name: 'Grenada'
-					}, {
-						latLng: [13.16, -61.23],
-						name: 'Saint Vincent and the Grenadines'
-					}, {
-						latLng: [13.16, -59.55],
-						name: 'Barbados'
-					}, {
-						latLng: [17.11, -61.85],
-						name: 'Antigua and Barbuda'
-					}, {
-						latLng: [-4.61, 55.45],
-						name: 'Seychelles'
-					}, {
-						latLng: [7.35, 134.46],
-						name: 'Palau'
-					}, {
-						latLng: [42.5, 1.51],
-						name: 'Andorra'
-					}, {
-						latLng: [14.01, -60.98],
-						name: 'Saint Lucia'
-					}, {
-						latLng: [6.91, 158.18],
-						name: 'Federated States of Micronesia'
-					}, {
-						latLng: [1.3, 103.8],
-						name: 'Singapore'
-					}, {
-						latLng: [1.46, 173.03],
-						name: 'Kiribati'
-					}, {
-						latLng: [-21.13, -175.2],
-						name: 'Tonga'
-					}, {
-						latLng: [15.3, -61.38],
-						name: 'Dominica'
-					}, {
-						latLng: [-20.2, 57.5],
-						name: 'Mauritius'
-					}, {
-						latLng: [26.02, 50.55],
-						name: 'Bahrain'
-					}, {
-						latLng: [0.33, 6.73],
-						name: 'São Tomé and Príncipe'
-					}],
-					series: {
+										series: {
 						regions: [{
 							scale: ['#C8EEFF', '#0071A4'],
 							normalizeFunction: 'polynomial',
@@ -367,21 +474,59 @@
 								"ZW": 5.57
 							}
 						}]
+					},
+
+					backgroundColor: '#383f47',
+					markers: plants.map(function(h) {
+						return {
+							name: h.name,
+							latLng: h.coords
+						}
+					}),
+					labels: {
+						markers: {
+							render: function(index) {
+								return plants[index].name;
+							},
+							offsets: function(index) {
+								var offset = plants[index]['offsets'] || [0, 0];
+								return [offset[0] - 7, offset[1] + 3];
+							}
+						}
+					},
+					series: {
+						markers: [{
+							attribute: 'image',
+							scale: {
+								'closed': 'assets/iconfont-group.png',
+								'activeUntil2018': 'assets/iconfont-senlinziyuanguanli.png',
+								'activeUntil2022': 'assets/iconfont-group.png'
+							},
+							values: plants.reduce(function(p, c, i) {
+								p[i] = c.status;
+								return p
+							}, {}),
+						}]
 					}
 				});
-			})
+			});
 		</script>
 		<style>
-			#map1 {width: 100%; height:786px; padding: 0px; margin: 0px;}
+			#map1 {
+				width: 100%;
+				height: 786px;
+				padding: 0px;
+				margin: 0px;
+			}
 		</style>
 	</head>
 
 	<body style="padding: 0px; margin: 0px; width: 100%; height: 100%;">
 		<div id="map1" style=""></div>
-		<button id="focus-single">Focus on Australia</button>
+		<!--<button id="focus-single">Focus on Australia</button>
 		<button id="focus-multiple">Focus on Australia and Japan</button>
 		<button id="focus-coords">Focus on Cyprus</button>
-		<button id="focus-init">Return to the initial state</button>
+		<button id="focus-init">Return to the initial state</button>-->
 	</body>
 
 </html>
